--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 # 请妥善保管该文件
 # Please keep this file safely
-API_KEY=''
-URL='customer.hanxiaofei.me'
-DB_PASWD='gzFhYVwSem5v6-zw'
-IP_ADDR='78.141.232.2'
+API_KEY=''  # API密钥 API Secert Key
+Domain='aaa.bbb.com'  # 基础域名 Base Domain Name (no http:// or https://)
+DB_PASWD=''  # 数据库密码 Database Paswd 
+IP_ADDR='0.0.0.0'  # 服务器IP Server IP
 
 # DO NOT EDIT BELOW
 # 请勿编辑以下内容
