--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Django~=4.1.4
 requests~=2.28.1
 djangorestframework~=3.14.0
+djangorestframework-api-key~=2.2.0
 python-dotenv~=0.21.0
 django-widget-tweaks~=1.4.12
 python-dotenv~=0.21.0
